Fix navigation area padding on small devices
The existing padding was causing some overflow issues and adding horizontal scrolling to theme pages, the tap sizes for the menu items are big enough so the 15px side padding isn't necessary

--- a/source/stylesheets/navigation.sass
+++ b/source/stylesheets/navigation.sass
@@ -15,6 +15,7 @@
 
   @media screen and (max-width: $break-small)
     +justify-content(space-evenly)
+    width: 100%
 
 .nav-menu-item
   color: $text-color
@@ -34,7 +35,7 @@
 
     @media screen and (max-width: $break-small)
       font-size: 20px
-      padding: 2px 15px
+      padding: 2px
 
 .horizontal-nav-links
   +transform-origin(100% 0%)
